# ImageProcessingAlgorithms

AveragingFilter/: CMakeLists.txt  avgfilter.cpp  testpatternnew.raw  testpatternnew2.raw
ColorPhotoHistogramEqualization/: CMakeLists.txt  main.cpp  summer_deck1.raw  summer_deck1new.raw
LaplacialSharpeningFilter/: CMakeLists.txt  main.cpp  moonSharpened.raw
MedianFilter/: CMakeLists.txt  circuitnew.raw  medianfilter.cpp
SobelEdgeDetection/: CMakeLists.txt  Q1run.sh  buildingFinal.raw  buildingGradient.raw  buildingX.raw  buildingY.raw  holder.txt  main.cpp  output  placeholder.txt
